Fix margins to remove the horizontal scroll bar

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
 .door_text, .cave_text {
   width: 400px;
 }
+
+html body {
+  margin: 15px 15px 15px 15px;
+}
